# scribe

./: pyproject.toml
src/obsidian_agent/: cli.py  core.py  doctor.py  loop.py  ui.py
src/scribe/: cli.py  config.py  core.py  doctor.py  loop.py  ui.py
