[project]
name = "obsidian-agent-cli"
version = "0.1.0"
description = "A conversational AI agent for your Obsidian vault, connected via MCP."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "openai>=1.0.0",
    "mcp>=1.0.0",
]

[project.scripts]
obsidian-agent = "obsidian_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/obsidian_agent"]