[project]
name = "obsidian-agent-cli"
version = "0.1.0"
description = "A conversational AI agent for your Obsidian vault, connected via MCP."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "openai>=1.0.0",
    "mcp>=1.0.0",
    "obsidian-mcp>=2.1.6",
    "fastmcp==2.8.1",
    "pydantic<2.12,>=2.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.scripts]
obsidian-agent = "obsidian_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/obsidian_agent"]